app-lifecycle/mappit/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mapit
  name: mapit
  namespace: mapit
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mapit
  sessionAffinity: None
  type: ClusterIP
