app-lifecycle/mappit/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mapit
  name: mapit
  namespace: mapit
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: mapit
    weight: 100
